# fast-donate

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  crud.py  main.py  models.py  schemas.py
backend/app/core/: config.py  database.py  security.py
frontend/: Dockerfile  index.html
frontend/src/: App.jsx
frontend/src/components/: Home.css  Home.jsx  Login.css  Login.jsx  Register.css  Register.jsx
