[tool.poetry]
name = "app-backend"
version = "0.0.1"
description = "Simple Backend for my project"
authors = ["Yash Varshney <17yashvarshney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { extras = ["all"], version = "^0.65.2" }
uvicorn = "^0.13.4"
motor = "^2.3.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
